fix: show the macro container scrollbar only when the content is scrollable (#1768)

--- a/packages/uhk-web/src/app/components/macro/edit/macro-edit.component.scss
+++ b/packages/uhk-web/src/app/components/macro/edit/macro-edit.component.scss
@@ -34,7 +34,7 @@
 
 .macro-container {
     height: 100vh;
-    overflow: scroll;
+    overflow: auto;
     padding-right: math.div($grid-gutter-width, 2);
 }
 
